--- a/dark.scss
+++ b/dark.scss
@@ -29,6 +29,7 @@ $headings-font-family:                    "Lora", serif !default;
 
 .navbar-brand > img {
     padding: 20px 20px;
+    background: url("images/logo-dark.png");
     background-size: 40px;
     background-repeat: no-repeat;
 }
